deps/v8/test/message/fail/class-fields-private-throw-early.out
*%(basename)s:9: SyntaxError: Undefined private field #x: must be declared in an enclosing class
    this.#x = 1;
        ^
SyntaxError: Undefined private field #x: must be declared in an enclosing class